# api/restapi/operations/user_index_update_responses.go
@@ -1,141 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/NeuronEvolution/StockAssistant/api/models"
-)
-
-// UserIndexUpdateOKCode is the HTTP code returned for type UserIndexUpdateOK
-const UserIndexUpdateOKCode int = 200
-
-/*UserIndexUpdateOK ok
-
-swagger:response userIndexUpdateOK
-*/
-type UserIndexUpdateOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.StockIndex `json:"body,omitempty"`
-}
-
-// NewUserIndexUpdateOK creates UserIndexUpdateOK with default headers values
-func NewUserIndexUpdateOK() *UserIndexUpdateOK {
-	return &UserIndexUpdateOK{}
-}
-
-// WithPayload adds the payload to the user index update o k response
-func (o *UserIndexUpdateOK) WithPayload(payload *models.StockIndex) *UserIndexUpdateOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the user index update o k response
-func (o *UserIndexUpdateOK) SetPayload(payload *models.StockIndex) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *UserIndexUpdateOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// UserIndexUpdateBadRequestCode is the HTTP code returned for type UserIndexUpdateBadRequest
-const UserIndexUpdateBadRequestCode int = 400
-
-/*UserIndexUpdateBadRequest Bad request
-
-swagger:response userIndexUpdateBadRequest
-*/
-type UserIndexUpdateBadRequest struct {
-
-	/*
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewUserIndexUpdateBadRequest creates UserIndexUpdateBadRequest with default headers values
-func NewUserIndexUpdateBadRequest() *UserIndexUpdateBadRequest {
-	return &UserIndexUpdateBadRequest{}
-}
-
-// WithPayload adds the payload to the user index update bad request response
-func (o *UserIndexUpdateBadRequest) WithPayload(payload string) *UserIndexUpdateBadRequest {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the user index update bad request response
-func (o *UserIndexUpdateBadRequest) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *UserIndexUpdateBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(400)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
-
-// UserIndexUpdateInternalServerErrorCode is the HTTP code returned for type UserIndexUpdateInternalServerError
-const UserIndexUpdateInternalServerErrorCode int = 500
-
-/*UserIndexUpdateInternalServerError Internal error
-
-swagger:response userIndexUpdateInternalServerError
-*/
-type UserIndexUpdateInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewUserIndexUpdateInternalServerError creates UserIndexUpdateInternalServerError with default headers values
-func NewUserIndexUpdateInternalServerError() *UserIndexUpdateInternalServerError {
-	return &UserIndexUpdateInternalServerError{}
-}
-
-// WithPayload adds the payload to the user index update internal server error response
-func (o *UserIndexUpdateInternalServerError) WithPayload(payload string) *UserIndexUpdateInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the user index update internal server error response
-func (o *UserIndexUpdateInternalServerError) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *UserIndexUpdateInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
