# api/swagger.json
@@ -16,7 +16,7 @@
     "application/json;charset=utf-8"
   ],
   "securityDefinitions": {
-    "Bearer":{
+    "Bearer": {
       "type": "apiKey",
       "name": "Authorization",
       "in": "header"
@@ -66,9 +66,9 @@
           }
         }
       },
-      "put": {
-        "summary": "User add new index",
-        "operationId": "UserIndexAdd",
+      "post": {
+        "summary": "save",
+        "operationId": "UserIndexSave",
         "parameters": [
           {
             "in": "body",
@@ -77,6 +77,57 @@
             "schema": {
               "$ref": "#/definitions/StockIndex"
             },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/StockIndex"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "500": {
+            "description": "Internal error",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/{userId}/indices/rename":{
+      "parameters": [
+        {
+          "in": "path",
+          "name": "userId",
+          "description": "User id",
+          "type": "string",
+          "required": true
+        }
+      ],
+      "post": {
+        "summary": "",
+        "operationId": "UserIndexRename",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "oldName",
+            "description": "old name",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "newName",
+            "description": "new name",
+            "type": "string",
             "required": true
           }
         ],
@@ -123,41 +174,6 @@
         "summary": "Get user index",
         "operationId": "UserIndexGet",
         "parameters": [
-        ],
-        "responses": {
-          "200": {
-            "description": "ok",
-            "schema": {
-              "$ref": "#/definitions/StockIndex"
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "schema": {
-              "type": "string"
-            }
-          },
-          "500": {
-            "description": "Internal error",
-            "schema": {
-              "type": "string"
-            }
-          }
-        }
-      },
-      "patch": {
-        "summary": "User modify index",
-        "operationId": "UserIndexUpdate",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "Index",
-            "description": "Index",
-            "schema": {
-              "$ref": "#/definitions/StockIndex"
-            },
-            "required": true
-          }
         ],
         "responses": {
           "200": {
@@ -242,6 +258,41 @@
             }
           }
         }
+      },
+      "post": {
+        "summary": "save",
+        "operationId": "UserStockEvaluateSave",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "stockEvaluate",
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/StockEvaluate"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/StockEvaluate"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "500": {
+            "description": "Internal error",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
       }
     },
     "/{userId}/stockEvaluates/{stockId}": {
@@ -286,17 +337,63 @@
             }
           }
         }
+      }
+    },
+    "/{userId}/stockEvaluates/{stockId}/indexEvaluates": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "userId",
+          "description": "User id",
+          "type": "string",
+          "required": true
+        },
+        {
+          "in": "path",
+          "name": "stockId",
+          "description": "stock id",
+          "type": "string",
+          "required": true
+        }
+      ],
+      "get": {
+        "summary": "",
+        "operationId": "UserIndexEvaluateList",
+        "parameters": [
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/IndexEvaluate"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "500": {
+            "description": "Internal error",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
       },
       "post": {
-        "summary": "add or update",
-        "operationId": "UserStockEvaluateAddOrUpdate",
+        "summary": "",
+        "operationId": "UserIndexEvaluateSave",
         "parameters": [
           {
             "in": "body",
-            "name": "stockEvaluate",
-            "description": "",
+            "name": "indexEvaluate",
             "schema": {
-              "$ref": "#/definitions/StockEvaluate"
+              "$ref": "#/definitions/IndexEvaluate"
             },
             "required": true
           }
@@ -305,7 +402,58 @@
           "200": {
             "description": "ok",
             "schema": {
-              "$ref": "#/definitions/StockEvaluate"
+              "$ref": "#/definitions/IndexEvaluate"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "500": {
+            "description": "Internal error",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/{userId}/stockEvaluates/{stockId}/indexEvaluates/{indexName}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "userId",
+          "description": "User id",
+          "type": "string",
+          "required": true
+        },
+        {
+          "in": "path",
+          "name": "stockId",
+          "description": "stock id",
+          "type": "string",
+          "required": true
+        },
+        {
+          "in": "path",
+          "name": "indexName",
+          "description": "index name",
+          "type": "string",
+          "required": true
+        }
+      ],
+      "get": {
+        "summary": "",
+        "operationId": "UserIndexEvaluateGet",
+        "parameters": [
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "schema": {
+              "$ref": "#/definitions/IndexEvaluate"
             }
           },
           "400": {
@@ -362,9 +510,9 @@
           }
         }
       },
-      "put": {
-        "summary": "add",
-        "operationId": "UserSettingsAdd",
+      "post": {
+        "summary": "save",
+        "operationId": "UserSettingsSave",
         "parameters": [
           {
             "in": "body",
@@ -441,41 +589,6 @@
           }
         }
       },
-      "patch": {
-        "summary": "",
-        "operationId": "UserSettingsUpdate",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "Setting",
-            "description": "setting",
-            "schema": {
-              "$ref": "#/definitions/Setting"
-            },
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "ok",
-            "schema": {
-              "$ref": "#/definitions/Setting"
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "schema": {
-              "type": "string"
-            }
-          },
-          "500": {
-            "description": "Internal error",
-            "schema": {
-              "type": "string"
-            }
-          }
-        }
-      },
       "delete": {
         "summary": "",
         "operationId": "UserSettingsDelete",
@@ -522,10 +635,6 @@
       "description": "User stock index",
       "type": "object",
       "properties": {
-        "id": {
-          "description": "Id",
-          "type": "string"
-        },
         "name": {
           "description": "name",
           "type": "string"
@@ -565,16 +674,9 @@
           "type": "string",
           "format": "double"
         },
-        "evalRemark":{
+        "evalRemark": {
           "description": "remark",
           "type": "string"
-        },
-        "indexEvaluates": {
-          "description": "index evaluates",
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/IndexEvaluate"
-          }
         }
       }
     },
@@ -583,8 +685,8 @@
       "description": "index evaluate",
       "type": "object",
       "properties": {
-        "indexId": {
-          "description": "index id",
+        "indexName": {
+          "description": "index name",
           "type": "string"
         },
         "evalStars": {
