# cmd/stock-assistant-api/handler/convert.go
@@ -12,12 +12,26 @@ func fromIndex(p *models.StockIndex) (r *api.StockIndex) {
 	}
 
 	r = &api.StockIndex{}
-	r.ID = p.IndexId
 	r.Name = p.IndexName
 	r.Desc = p.IndexDesc
 	r.EvalWeight = p.EvalWeight
 	r.AiWeight = p.AIWeight
 	r.NiWeight = p.NIWeight
+
+	return r
+}
+
+func toIndex(p *api.StockIndex) (r *models.StockIndex) {
+	if p == nil {
+		return nil
+	}
+
+	r = &models.StockIndex{}
+	r.IndexName = p.Name
+	r.IndexDesc = p.Desc
+	r.EvalWeight = p.EvalWeight
+	r.AIWeight = p.AiWeight
+	r.NIWeight = p.NiWeight
 
 	return r
 }
@@ -41,7 +55,7 @@ func fromIndexEvaluate(p *models.IndexEvaluate) (r *api.IndexEvaluate) {
 	}
 
 	r = &api.IndexEvaluate{}
-	r.IndexID = p.IndexId
+	r.IndexName = p.IndexName
 	r.EvalStars = p.EvalStars
 	r.EvalRemark = p.EvalRemark
 	r.UpdateTime = strfmt.DateTime(p.UpdateTime)
@@ -70,7 +84,18 @@ func fromStockEvaluate(p *models.StockEvaluate) (r *api.StockEvaluate) {
 	r = &api.StockEvaluate{}
 	r.StockID = p.StockId
 	r.TotalScore = p.TotalScore
-	r.IndexEvaluates = fromIndexEvaluateList(p.IndexEvaluates)
+
+	return r
+}
+
+func toStockEvaluate(p *api.StockEvaluate) (r *models.StockEvaluate) {
+	if p == nil {
+		return nil
+	}
+
+	r = &models.StockEvaluate{}
+	r.StockId = p.StockID
+	r.TotalScore = p.TotalScore
 
 	return r
 }
@@ -83,6 +108,31 @@ func fromStockEvaluateList(p []*models.StockEvaluate) (r []*api.StockEvaluate) {
 	r = make([]*api.StockEvaluate, 0)
 	for _, v := range p {
 		r = append(r, fromStockEvaluate(v))
+	}
+
+	return r
+}
+
+func fromUserSetting(p *models.Setting) (r *api.Setting) {
+	if p == nil {
+		return nil
+	}
+
+	r = &api.Setting{}
+	r.Key = p.ConfigKey
+	r.Value = p.ConfigValue
+
+	return r
+}
+
+func fromUserSettingList(p []*models.Setting) (r []*api.Setting) {
+	if p == nil {
+		return nil
+	}
+
+	r = make([]*api.Setting, 0)
+	for _, v := range p {
+		r = append(r, fromUserSetting(v))
 	}
 
 	return r
