# models/index-evaluate.go
@@ -3,7 +3,7 @@ package models
 import "time"
 
 type IndexEvaluate struct {
-	IndexId    string
+	IndexName  string
 	EvalStars  int32
 	EvalRemark string
 	UpdateTime time.Time
